--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+.data/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -86,6 +86,8 @@ celerybeat-schedule
 # Environments
 .env
 .venv
+data/
+.data/
 env/
 venv/
 ENV/
