--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
     build: .
     container_name: igmaApi
     ports:
-      - "8000:8000"
+      - "8002:8000"
     depends_on:
       - db
     env_file:
       - .env
     volumes:
       - .:/app
-    command: uvicorn run:app --reload
+    command: uvicorn run:app --reload --workers 1 --host 0.0.0.0 --port 8000
 
 volumes:
   postgres-volume:
